# price-tracker

./: .env.example  .gitignore  .mcp.json  GUIDE.md  PRO-TIPS.md  README.md  TROUBLESHOOTING.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  debugger.md  deploy-helper.md  docs-writer.md  ui-designer.md
.claude/skills/everything-claude-code-conventions/: SKILL.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: db.py  main.py  scraper.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: AddItemForm.tsx  FullChart.tsx  ItemCard.tsx  SparklineChart.tsx
frontend/lib/: api.ts
projects/01-portfolio/: PROMPT.md  README.md
projects/02-price-tracker/: PROMPT.md  README.md
setup/: linux.sh  mac-intel.sh  mac-silicon.sh  windows.ps1
